@@ -1,15 +1,17 @@
 package microservice_traceability.traceability.application.handler;
 
 import lombok.RequiredArgsConstructor;
+import microservice_traceability.traceability.application.dto.EmployeeEfficiencyResponse;
 import microservice_traceability.traceability.application.dto.OrderStatusHistoryRequest;
 import microservice_traceability.traceability.application.dto.OrderStatusHistoryResponse;
+import microservice_traceability.traceability.application.dto.OrderTimeResponse;
 import microservice_traceability.traceability.application.mapper.IOrderStatusHistoryMapper;
 import microservice_traceability.traceability.domain.api.IOrderStatusHistoryServicePort;
 import microservice_traceability.traceability.domain.model.OrderStatusHistory;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,6 +31,19 @@ public class OrderStatusHistoryHandler implements IOrderStatusHistoryHandler{
         List<OrderStatusHistory> historyList = orderStatusHistoryService.getOrderStatusHistoryByOrderId(orderId);
         return historyList.stream()
                 .map(orderStatusHistoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public OrderTimeResponse getOrderTimeByOrderId(Long orderId) {
+        Duration duration = orderStatusHistoryService.calculateOrderDuration(orderId);
+        return orderStatusHistoryMapper.toOrderTimeResponse(orderId, duration);
+    }
+
+    @Override
+    public List<EmployeeEfficiencyResponse> getEmployeeEfficiencyRanking() {
+        return orderStatusHistoryService.calculateAverageOrderCompletionTimePerEmployee().stream()
+                .map(orderStatusHistoryMapper::toEmployeeEfficiencyResponse)
+                .toList();
     }
 }
